--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="git">
 <h1>Landing Page</h1>
 <h3>Purpose: A simple landing page, where you can enter a name and it displays. Refresh to switch the background and affirmation.</h3>
-<a href="https://github.com/Priyanka23-Brs/Landing-Page-JS"><button class="btns">Git-Repo</button></a>
+<a href="https://github.com/chakradhar-brs/landing-page?tab=readme-ov-file"><button class="btns">Git-Repo</button></a>
       </div>
     </header>
 
